--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,8 @@
+import org.springframework.boot.gradle.plugin.SpringBootPlugin
+
+plugins {
+    id 'org.springframework.boot' version '2.4.4' apply false
+}
 
 version '1.0.0'
 
@@ -18,9 +23,20 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'maven-publish'
     apply plugin: 'application'
+    apply plugin: 'io.spring.dependency-management'
 
     sourceCompatibility = JavaVersion.VERSION_11
     targetCompatibility = JavaVersion.VERSION_11
+
+    dependencyManagement {
+        imports {
+            mavenBom SpringBootPlugin.BOM_COORDINATES
+        }
+
+        dependencies {
+
+        }
+    }
 
     dependencies {
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
