添加全局事务配置

--- a/common-aspect/build.gradle
+++ b/common-aspect/build.gradle
@@ -1,9 +1,13 @@
 
-version '1.0.0'
+version = "$pfuCommonAspectVersion"
 
 dependencies {
     compile "pfu.common:common-base:1.0.0"
-    compile "org.aspectj:aspectjweaver:1.9.6"
+
+    compile "org.springframework.boot:spring-boot-starter-aop"
+    compile "org.springframework.boot:spring-boot-starter-jdbc"
+
     compile "org.slf4j:slf4j-api:1.7.30"
+    compile "org.aspectj:aspectjweaver:1.9.6"
     compile "org.hibernate.validator:hibernate-validator:6.2.0.Final"
 }
