--- a/common-base/build.gradle
+++ b/common-base/build.gradle
@@ -2,13 +2,12 @@
 version = "$pfuCommonBaseVersion"
 
 dependencies {
-    // 属性拷贝
-    compile 'cglib:cglib-nodep:3.3.0'
     // JSON处理
-    compile 'com.alibaba:fastjson:1.2.74'
+    compile "com.alibaba:fastjson:$fastJsonVersion"
     // 汉字转拼音
-    compile 'com.belerweb:pinyin4j:2.5.0'
+    compile "com.belerweb:pinyin4j:$pinyin4jVersion"
     // 属性校验
-    compile 'javax.validation:validation-api:2.0.1.Final'
-
+    compile "javax.validation:validation-api:$javaxValidationVersion"
+    // 属性拷贝
+    compile "cglib:cglib-nodep:$cglibNodepVersion"
 }
