--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,15 @@
-# Spring
-springBootVersion=2.4.4
 
 pfuCommonBaseVersion=1.0.0
 pfuCommonAspectVersion=1.0.0
+
+# Spring
+springBootVersion=2.4.4
+
+# 其他库（按字母排序）
+aspectjWeaverVersion=1.9.6
+cglibNodepVersion=3.3.0
+fastJsonVersion=1.2.74
+hibernateValidatorVersion=6.2.0.Final
+javaxValidationVersion=2.0.1.Final
+pinyin4jVersion=2.5.0
+slf4jApiVersion=1.7.30
