--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 plugins {
-    id 'org.springframework.boot' version '2.4.4' apply false
+    id 'org.springframework.boot' version "$springBootVersion" apply false
 }
 
 version '1.0.0'
