--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 
 pfuCommonBaseVersion=1.0.0
 pfuCommonAspectVersion=1.0.0
+pfuCommonRedisVersion=1.0.0
+pfuCommonSwaggerVersion=1.0.0
 
 # Spring
 springBootVersion=2.4.4
