--- a/common-swagger/build.gradle
+++ b/common-swagger/build.gradle
@@ -2,6 +2,5 @@
 version = "$pfuCommonSwaggerVersion"
 
 dependencies {
-    compile "io.springfox:springfox-swagger2:2.9.2"
-    compile "io.springfox:springfox-swagger-ui:2.9.2"
+    compile "com.github.xiaoymin:knife4j-spring-boot-starter:2.0.7"
 }
