--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,6 @@ cglibNodepVersion=3.3.0
 fastJsonVersion=1.2.74
 hibernateValidatorVersion=6.2.0.Final
 javaxValidationVersion=2.0.1.Final
+knife4jStarterVersion=2.0.7
 pinyin4jVersion=2.5.0
 slf4jApiVersion=1.7.30
