--- a/common-swagger/build.gradle
+++ b/common-swagger/build.gradle
@@ -2,5 +2,5 @@
 version = "$pfuCommonSwaggerVersion"
 
 dependencies {
-    compile "com.github.xiaoymin:knife4j-spring-boot-starter:2.0.7"
+    compile "com.github.xiaoymin:knife4j-spring-boot-starter:$knife4jStarterVersion"
 }
