--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ pfuCommonBaseVersion=1.0.0
 pfuCommonAspectVersion=1.0.0
 pfuCommonRedisVersion=1.0.0
 pfuCommonSwaggerVersion=1.0.0
+pfuCommonQuartzVersion=1.0.0
 
 # Spring
 springBootVersion=2.4.4
@@ -15,4 +16,5 @@ hibernateValidatorVersion=6.2.0.Final
 javaxValidationVersion=2.0.1.Final
 knife4jStarterVersion=2.0.7
 pinyin4jVersion=2.5.0
+quartzVersion=2.2.1
 slf4jApiVersion=1.7.30
