--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ pfuCommonAspectVersion=1.0.0
 pfuCommonRedisVersion=1.0.0
 pfuCommonSwaggerVersion=1.0.0
 pfuCommonQuartzVersion=1.0.0
+pfuCommonJwtVersion=1.0.0
 
 # Spring
 springBootVersion=2.4.4
@@ -15,6 +16,7 @@ fastJsonVersion=1.2.74
 hibernateValidatorVersion=6.2.0.Final
 javaxValidationVersion=2.0.1.Final
 knife4jStarterVersion=2.0.7
+nimbusJwtVersion=9.1
 pinyin4jVersion=2.5.0
 quartzVersion=2.2.1
 slf4jApiVersion=1.7.30
