--- a/gradle.properties
+++ b/gradle.properties
@@ -15,8 +15,8 @@ cglibNodepVersion=3.3.0
 fastJsonVersion=1.2.74
 hibernateValidatorVersion=6.2.0.Final
 javaxValidationVersion=2.0.1.Final
+javaJwtVersion=3.9.0
 knife4jStarterVersion=2.0.7
-nimbusJwtVersion=9.1
 pinyin4jVersion=2.5.0
 quartzVersion=2.2.1
 slf4jApiVersion=1.7.30
