添加Annotation Processor依赖自动为配置属性类生成配置元数据文件

--- a/common-global/build.gradle
+++ b/common-global/build.gradle
@@ -7,4 +7,6 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter:2.4.0"
     compile "org.springframework.boot:spring-boot-starter-aop"
     compile "org.hibernate.validator:hibernate-validator:$hibernateValidatorVersion"
+
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 }
