调整代码结构；实现全局事务自动配置

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 
 pfuCommonBaseVersion=1.0.0
-pfuCommonAspectVersion=1.0.0
+pfuCommonGtxVersion=1.0.0
+pfuCommonGexVersion=1.0.0
 pfuCommonRedisVersion=1.0.0
 pfuCommonSwaggerVersion=1.0.0
 pfuCommonQuartzVersion=1.0.0
